--- a/app/views/pawlowiczs/new.html.slim
+++ b/app/views/pawlowiczs/new.html.slim
@@ -1,3 +1,4 @@
+- provide :title, "Nowy Pawłowicz"
 .container
   = simple_form_for @quote, url: pawlowiczs_path do |f|
     = f.input :body, as: :text, input_html: { maxlength: 180 }
