--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,4 +12,6 @@ html
     = yield
     .footer
       .container
-        | 2015 source on github
+        | 2015 source on 
+        a href='https://github.com/mhib/pawlowicz'
+          | github
