--- a/app/assets/stylesheets/pawlowiczs.scss
+++ b/app/assets/stylesheets/pawlowiczs.scss
@@ -4,20 +4,32 @@
 //
 @import "bootstrap/variables";
 @import "layout";
-#content{
-  font-family: 'Berkshire Swash', cursive;
-  top: 40%;
+html, body
+{
+  height: 100%;
+}
+#lip {
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  display: table;
+  text-align: center;
+}
+#quote_content{
+  display: table-cell;
   vertical-align: middle;
-  position: absolute;
-  margin: 0;
-  left: 30%;
-  margin-right: -50%;
+  font-family: 'Berkshire Swash', cursive;
+  vertical-align: middle;
+  margin: auto;
+  display: table-cell;
+  top: 50%;
   max-width: 100%;
   overflow: auto;
-  transform: translate(-50%, -50%);
+  width: 50%;
+  text-align: center;
 }
 
-#content > h1
+#quote_content > h1
 {
   font-size: 500%;
 }
@@ -71,13 +83,15 @@
 
 #pawlowicz
 {
-  position: absolute;
-  margin-left: 50%;
-  width: 50%;
-  margin-right: -15px;
+  background-image: image-url('pawlowicz.png');
+  width: 400px;
+  position: fixed;
+  height: 100%;
+  right: 0;
   overflow: hidden;
-  max-height: 100%;
-  z-index: -999;
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+  z-index: -1;
 }
 
 .index_quote
